--- a/app/src/main/res/layout/row_images.xml
+++ b/app/src/main/res/layout/row_images.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="android.view.View"/>
         <variable name="item"
             type="com.akm.flickr.model.FlickrPublicPhotosModel.Item"/>
 
@@ -12,12 +13,16 @@
         <variable
             name="itemClickListener"
             type="com.akm.flickr.adapter.RecyclerViewArrayAdapter.OnItemClickListener" />
+
+        <variable
+            name="isUser"
+            type="Boolean" />
     </data>
 
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="230dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
@@ -27,13 +32,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_flickr"
-            android:layout_gravity="center"
-            android:layout_marginBottom="25dp"/>
+            android:layout_gravity="center"/>
 
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="230dp"
             app:src="@{item.media.m}"
             android:scaleType="centerCrop"/>
         <TextView
@@ -45,6 +49,20 @@
             android:text="@{item.title.length() > 0 ? item.title : `No Name`}"
             android:gravity="center"
             android:background="#2d000000"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|end"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:text="View more images by user"
+            android:padding="10dp"
+            android:gravity="center"
+            android:background="#2d000000"
+            android:id="@+id/tvViewMore"
+            android:visibility="@{isUser ? View.GONE : View.VISIBLE}"
+            android:onClick="@{(view)-> itemClickListener.onItemClick(view, index, item)}"/>
     </FrameLayout>
 
 
